# ChatBot_Rag

./: .env  .gitignore  README.md  app.py  main - Copy.ipynb  main.ipynb  pyproject.toml
ma_base_vectorielle/: chroma.sqlite3
