[project]
name = "tp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "groq>=1.1.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.31.0",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.4.0",
    "streamlit>=1.45.0",
    "tiktoken>=0.12.0",
    "torchvision>=0.26.0",
    "uuid>=1.30",
]
